--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^30.2.0",
     "typescript": "~5.9.2"
   },
   "private": true
