Migrate backend from Supabase to Firebase
Replaces Supabase with Firebase as the backend service. Updates environment variables, documentation, and project dependencies to use Firebase. Adds Firebase configuration files and client code, removes Supabase client code, and updates references throughout the codebase.

--- a/app.json
+++ b/app.json
@@ -38,7 +38,8 @@
             "backgroundColor": "#000000"
           }
         }
-      ]
+      ],
+      "@react-native-firebase/app"
     ],
     "experiments": {
       "typedRoutes": true,
