--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,159 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# dependencies
+# ===============================
+# Dependencies
+# ===============================
 node_modules/
+.pnp/
+.pnp.js
+.yarn/
 
-# Expo
+# ===============================
+# Expo / React Native
+# ===============================
 .expo/
 dist/
 web-build/
 expo-env.d.ts
+.expo-shared/
 
-# Native
+# EAS Build
+.eas/
+
+# ===============================
+# Native - Generated folders
+# ===============================
+/ios/
+/android/
 .kotlin/
+
+# ===============================
+# Native - Certificates & Keys
+# ===============================
 *.orig.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
+*.cer
+*.certSigningRequest
+*.provisionprofile
 
-# Metro
+# ===============================
+# Metro Bundler
+# ===============================
 .metro-health-check*
 
-# debug
+# ===============================
+# Debug logs
+# ===============================
 npm-debug.*
 yarn-debug.*
 yarn-error.*
+lerna-debug.log*
+*.log
 
-# macOS
-.DS_Store
-*.pem
-
-# local env files
+# ===============================
+# Environment variables
+# ===============================
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
 .env*.local
 
-# typescript
+# ===============================
+# Operating System
+# ===============================
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+.Spotlight-V100
+.Trashes
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+# ===============================
+# IDE & Editors
+# ===============================
+# JetBrains (WebStorm, IntelliJ, etc.)
+.idea/
+*.iml
+out/
+gen/
+*.ipr
+*.iws
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Sublime Text
+*.sublime-workspace
+
+# Vim
+*.swp
+*.swo
+*~
+
+# ===============================
+# Build & Output
+# ===============================
+build/
 *.tsbuildinfo
+*.tgz
 
-app-example
+# ===============================
+# Testing
+# ===============================
+coverage/
+.nyc_output/
+jest-results/
 
-# generated native folders
-/ios
-/android
+# ===============================
+# Misc
+# ===============================
+*.pem
+*.local
+app-example/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Cache
+.cache/
+*.cache
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+pubsub-debug.log
+
+# Sentry
+.sentryclirc
