Remove authentication and example screens, update navigation
This commit removes all authentication-related code, example screens, and associated assets. The tab navigation is restructured to use new routes (map, itinerary, community, profile) with updated icons and titles. Project configuration is simplified, removing custom icons and splash images, and the alias setup is consolidated to only use '@/'. Dependencies for map and location features are added. The root layout is refactored to remove authentication logic and use the navigation theme provider.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,30 +3,10 @@
   "compilerOptions": {
     "strict": true,
     "skipLibCheck": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
-      ],
-      "@/src/*": [
         "./src/*"
-      ],
-      "@/features/*": [
-        "./src/features/*"
-      ],
-      "@/shared/*": [
-        "./src/shared/*"
-      ],
-      "@/lib/*": [
-        "./src/lib/*"
-      ],
-      "@/config/*": [
-        "./src/config/*"
-      ],
-      "@/store/*": [
-        "./src/store/*"
-      ],
-      "@/providers/*": [
-        "./src/providers/*"
       ]
     }
   },
