Add datetime picker dependency and config

--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
           }
         }
       ],
-      "@react-native-firebase/app"
+      "@react-native-firebase/app",
+      "@react-native-community/datetimepicker"
     ],
     "experiments": {
       "typedRoutes": true,
