Refactor chat thread route and add chat feature exports
Refactored the /chat/[threadId] route to delegate all logic to the new ChatThreadScreen component from the chat feature module. Added a barrel export for the chat feature in src/features/chat/index.ts. Updated app.json with softwareKeyboardLayoutMode for Android. Added i18next, react-i18next, and jest dependencies.

--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "android": {
       "package": "com.univillage.app",
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "softwareKeyboardLayoutMode": "resize"
     },
     "web": {
       "output": "static"
