--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "firebase": "^11.2.0",
+    "i18next": "^25.7.4",
+    "jest": "~29.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.70.0",
+    "react-i18next": "^16.5.1",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
