--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^21.8.1",
     "@react-native-firebase/auth": "^21.8.1",
     "@react-native-firebase/firestore": "^21.8.1",
