--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,15 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 EXPO_PUBLIC_FIREBASE_APP_ID=your_app_id
 
+# Google Maps API Configuration
+# Get your key from: https://console.cloud.google.com/google/maps-apis
+# Required APIs: Directions API, Maps JavaScript API
+EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key
+
+# Gemini AI API Configuration
+# Get your key from: https://ai.google.dev/
+# Used for AI-generated itinerary suggestions
+EXPO_PUBLIC_GEMINI_API_KEY=your_gemini_api_key
 
 # App Configuration
 EXPO_PUBLIC_APP_NAME=Uni Village
