--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-av": "^16.0.8",
+    "expo-camera": "~17.0.10",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
     "expo-file-system": "^19.0.21",
@@ -40,6 +41,7 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
+    "expo-media-library": "~18.2.1",
     "expo-router": "~6.0.21",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.13",
@@ -64,6 +66,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^15.15.1",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "sockjs-client": "^1.6.1",
