Thêm giao diện 2 thẻ AI gợi ý lịch trình

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,1 +1,18 @@
-{ "recommendations": ["expo.vscode-expo-tools"] }
+{
+  "recommendations": [
+    "expo.vscode-expo-tools",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "msjsdiag.vscode-react-native",
+    "dsznajder.es7-react-js-snippets",
+    "42crunch.vscode-openapi",
+    "humao.rest-client",
+    "eamodio.gitlens",
+    "usernamehw.errorlens",
+    "gruntfuggly.todo-tree",
+    "christian-kohler.path-intellisense",
+    "wix.vscode-import-cost",
+    "redhat.vscode-yaml"
+  ],
+  "unwantedRecommendations": []
+}
