Build FE profile

--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
-    "name": "Uni_Village",
+    "name": "Uni Village",
     "slug": "Uni_Village",
     "version": "1.0.0",
     "orientation": "portrait",
+    "icon": "./src/assets/images/univillage-logo.png",
     "scheme": "univillage",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -24,9 +25,14 @@
       [
         "expo-splash-screen",
         {
-          "backgroundColor": "#ffffff",
+          "image": "./src/assets/images/univillage-logo.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#EFF6FF",
           "dark": {
-            "backgroundColor": "#000000"
+            "image": "./src/assets/images/univillage-logo.png",
+            "imageWidth": 200,
+            "backgroundColor": "#1E293B"
           }
         }
       ],
