Ignore Firebase service account keys in .gitignore
Added patterns to .gitignore to prevent accidental commits of sensitive Firebase service account JSON files.

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,13 @@ lerna-debug.log*
 .env*.local
 
 # ===============================
+# Firebase Service Account (SENSITIVE - NEVER COMMIT)
+# ===============================
+firebase-service-account.json
+*-service-account.json
+serviceAccountKey.json
+
+# ===============================
 # Operating System
 # ===============================
 # macOS
