--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@stomp/stompjs": "^7.2.1",
     "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
-    "expo": "~54.0.30",
+    "expo": "~54.0.32",
+    "expo-auth-session": "~7.0.10",
     "expo-av": "^16.0.8",
     "expo-camera": "~17.0.10",
     "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -43,7 +45,7 @@
     "expo-linking": "~8.0.11",
     "expo-location": "~19.0.8",
     "expo-media-library": "~18.2.1",
-    "expo-router": "~6.0.21",
+    "expo-router": "~6.0.22",
     "expo-secure-store": "^15.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
@@ -66,7 +68,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-size-matters": "^0.4.2",
-    "react-native-svg": "^15.15.1",
+    "react-native-svg": "15.12.1",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
@@ -79,7 +81,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "jest": "^30.2.0",
+    "jest": "~29.7.0",
     "jest-expo": "^54.0.16",
     "openapi-typescript-codegen": "^0.30.0",
     "react-test-renderer": "^19.1.0",
